[package]
name = "latke"
version = "0.0.0"
authors = ["raykast <rookie1286@gmail.com>"]
edition = "2021"
description = "A tool for hashing files on a filesystem to locate duplicates."
documentation = "https://docs.rs/latke/"
readme = "README.md"
# homepage = TODO
repository = "https://github.com/ray-kast/latke"
license = "MIT OR Apache-2.0"
keywords = ["hash", "files", "deduplication"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
dashmap = "5.0.0"
env_logger = "0.9.0"
log = "0.4.14"
sha2 = "0.10.0"
topograph = "0.2.1-alpha.1"
